Add fromTime and toTime event filters
